// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mock for method: {"name":"open","args":{"content":"Args message content"}} - default - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"content":"Args message content"}} - default - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"content":"Args message content"}} - default - value[0] - loading 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"content":"Args message content"}} - default - value[0] - success 1`] = `
Array [
  Array [
    Object {
      "className": "{}",
      "content": <HtmlComponent
        html="Args message content"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "moveItemDown": [MockFunction],
            "moveItemUp": [MockFunction],
            "open": [Function],
            "pushItem": [MockFunction],
            "registerEvent": [MockFunction],
            "registerMethod": [Function],
            "removeItem": [MockFunction],
            "setValue": [MockFunction],
            "triggerEvent": [MockFunction],
            "unshiftItem": [MockFunction],
          }
        }
      />,
      "duration": undefined,
      "icon": undefined,
      "id": "default_message",
      "onClose": [Function],
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"content":"Args message content"}} - default - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"content":"Args message content"}} - properties.content - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"content":"Args message content"}} - properties.content - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"content":"Args message content"}} - properties.content - value[0] - loading 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"content":"Args message content"}} - properties.content - value[0] - success 1`] = `
Array [
  Array [
    Object {
      "className": "{}",
      "content": <HtmlComponent
        html="Args message content"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "moveItemDown": [MockFunction],
            "moveItemUp": [MockFunction],
            "open": [Function],
            "pushItem": [MockFunction],
            "registerEvent": [MockFunction],
            "registerMethod": [Function],
            "removeItem": [MockFunction],
            "setValue": [MockFunction],
            "triggerEvent": [MockFunction],
            "unshiftItem": [MockFunction],
          }
        }
      />,
      "duration": undefined,
      "icon": undefined,
      "id": "properties.content_message",
      "onClose": [Function],
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"content":"Args message content"}} - properties.content - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"content":"Args message content"}} - properties.duration - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"content":"Args message content"}} - properties.duration - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"content":"Args message content"}} - properties.duration - value[0] - loading 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"content":"Args message content"}} - properties.duration - value[0] - success 1`] = `
Array [
  Array [
    Object {
      "className": "{}",
      "content": <HtmlComponent
        html="Args message content"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "moveItemDown": [MockFunction],
            "moveItemUp": [MockFunction],
            "open": [Function],
            "pushItem": [MockFunction],
            "registerEvent": [MockFunction],
            "registerMethod": [Function],
            "removeItem": [MockFunction],
            "setValue": [MockFunction],
            "triggerEvent": [MockFunction],
            "unshiftItem": [MockFunction],
          }
        }
      />,
      "duration": 5,
      "icon": undefined,
      "id": "properties.duration_message",
      "onClose": [Function],
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"content":"Args message content"}} - properties.duration - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"content":"Args message content"}} - properties.icon - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"content":"Args message content"}} - properties.icon - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"content":"Args message content"}} - properties.icon - value[0] - loading 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"content":"Args message content"}} - properties.icon - value[0] - success 1`] = `
Array [
  Array [
    Object {
      "className": "{}",
      "content": <HtmlComponent
        html="Args message content"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "moveItemDown": [MockFunction],
            "moveItemUp": [MockFunction],
            "open": [Function],
            "pushItem": [MockFunction],
            "registerEvent": [MockFunction],
            "registerMethod": [Function],
            "removeItem": [MockFunction],
            "setValue": [MockFunction],
            "triggerEvent": [MockFunction],
            "unshiftItem": [MockFunction],
          }
        }
      />,
      "duration": undefined,
      "icon": <IconBlock
        basePath=""
        blockId="properties.icon_icon"
        content={Object {}}
        events={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "makeCssClass": [MockFunction],
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
        properties="AppleFilled"
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "id": "properties.icon_message",
      "onClose": [Function],
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"content":"Args message content"}} - properties.icon - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"content":"Args message content"}} - properties.status: error - value[0] - error 1`] = `
Array [
  Array [
    Object {
      "className": "{}",
      "content": <HtmlComponent
        html="Args message content"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "moveItemDown": [MockFunction],
            "moveItemUp": [MockFunction],
            "open": [Function],
            "pushItem": [MockFunction],
            "registerEvent": [MockFunction],
            "registerMethod": [Function],
            "removeItem": [MockFunction],
            "setValue": [MockFunction],
            "triggerEvent": [MockFunction],
            "unshiftItem": [MockFunction],
          }
        }
      />,
      "duration": undefined,
      "icon": undefined,
      "id": "properties.status: error_message",
      "onClose": [Function],
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"content":"Args message content"}} - properties.status: error - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"content":"Args message content"}} - properties.status: error - value[0] - loading 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"content":"Args message content"}} - properties.status: error - value[0] - success 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"content":"Args message content"}} - properties.status: error - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"content":"Args message content"}} - properties.status: info - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"content":"Args message content"}} - properties.status: info - value[0] - info 1`] = `
Array [
  Array [
    Object {
      "className": "{}",
      "content": <HtmlComponent
        html="Args message content"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "moveItemDown": [MockFunction],
            "moveItemUp": [MockFunction],
            "open": [Function],
            "pushItem": [MockFunction],
            "registerEvent": [MockFunction],
            "registerMethod": [Function],
            "removeItem": [MockFunction],
            "setValue": [MockFunction],
            "triggerEvent": [MockFunction],
            "unshiftItem": [MockFunction],
          }
        }
      />,
      "duration": undefined,
      "icon": undefined,
      "id": "properties.status: info_message",
      "onClose": [Function],
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"content":"Args message content"}} - properties.status: info - value[0] - loading 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"content":"Args message content"}} - properties.status: info - value[0] - success 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"content":"Args message content"}} - properties.status: info - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"content":"Args message content"}} - properties.status: loading - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"content":"Args message content"}} - properties.status: loading - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"content":"Args message content"}} - properties.status: loading - value[0] - loading 1`] = `
Array [
  Array [
    Object {
      "className": "{}",
      "content": <HtmlComponent
        html="Args message content"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "moveItemDown": [MockFunction],
            "moveItemUp": [MockFunction],
            "open": [Function],
            "pushItem": [MockFunction],
            "registerEvent": [MockFunction],
            "registerMethod": [Function],
            "removeItem": [MockFunction],
            "setValue": [MockFunction],
            "triggerEvent": [MockFunction],
            "unshiftItem": [MockFunction],
          }
        }
      />,
      "duration": undefined,
      "icon": undefined,
      "id": "properties.status: loading_message",
      "onClose": [Function],
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"content":"Args message content"}} - properties.status: loading - value[0] - success 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"content":"Args message content"}} - properties.status: loading - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"content":"Args message content"}} - properties.status: warning - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"content":"Args message content"}} - properties.status: warning - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"content":"Args message content"}} - properties.status: warning - value[0] - loading 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"content":"Args message content"}} - properties.status: warning - value[0] - success 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"content":"Args message content"}} - properties.status: warning - value[0] - warning 1`] = `
Array [
  Array [
    Object {
      "className": "{}",
      "content": <HtmlComponent
        html="Args message content"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "moveItemDown": [MockFunction],
            "moveItemUp": [MockFunction],
            "open": [Function],
            "pushItem": [MockFunction],
            "registerEvent": [MockFunction],
            "registerMethod": [Function],
            "removeItem": [MockFunction],
            "setValue": [MockFunction],
            "triggerEvent": [MockFunction],
            "unshiftItem": [MockFunction],
          }
        }
      />,
      "duration": undefined,
      "icon": undefined,
      "id": "properties.status: warning_message",
      "onClose": [Function],
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"content":"Args message content"}} - with html content - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"content":"Args message content"}} - with html content - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"content":"Args message content"}} - with html content - value[0] - loading 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"content":"Args message content"}} - with html content - value[0] - success 1`] = `
Array [
  Array [
    Object {
      "className": "{}",
      "content": <HtmlComponent
        html="Args message content"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "moveItemDown": [MockFunction],
            "moveItemUp": [MockFunction],
            "open": [Function],
            "pushItem": [MockFunction],
            "registerEvent": [MockFunction],
            "registerMethod": [Function],
            "removeItem": [MockFunction],
            "setValue": [MockFunction],
            "triggerEvent": [MockFunction],
            "unshiftItem": [MockFunction],
          }
        }
      />,
      "duration": undefined,
      "icon": undefined,
      "id": "with html content_message",
      "onClose": [Function],
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"content":"Args message content"}} - with html content - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - default - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - default - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - default - value[0] - loading 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - default - value[0] - success 1`] = `
Array [
  Array [
    Object {
      "className": "{}",
      "content": <HtmlComponent
        html="default"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "moveItemDown": [MockFunction],
            "moveItemUp": [MockFunction],
            "open": [Function],
            "pushItem": [MockFunction],
            "registerEvent": [MockFunction],
            "registerMethod": [Function],
            "removeItem": [MockFunction],
            "setValue": [MockFunction],
            "triggerEvent": [MockFunction],
            "unshiftItem": [MockFunction],
          }
        }
      />,
      "duration": 1,
      "icon": undefined,
      "id": "default_message",
      "onClose": [Function],
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - default - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.content - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.content - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.content - value[0] - loading 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.content - value[0] - success 1`] = `
Array [
  Array [
    Object {
      "className": "{}",
      "content": <HtmlComponent
        html="Message content"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "moveItemDown": [MockFunction],
            "moveItemUp": [MockFunction],
            "open": [Function],
            "pushItem": [MockFunction],
            "registerEvent": [MockFunction],
            "registerMethod": [Function],
            "removeItem": [MockFunction],
            "setValue": [MockFunction],
            "triggerEvent": [MockFunction],
            "unshiftItem": [MockFunction],
          }
        }
      />,
      "duration": 1,
      "icon": undefined,
      "id": "properties.content_message",
      "onClose": [Function],
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.content - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.duration - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.duration - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.duration - value[0] - loading 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.duration - value[0] - success 1`] = `
Array [
  Array [
    Object {
      "className": "{}",
      "content": <HtmlComponent
        html="Message content"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "moveItemDown": [MockFunction],
            "moveItemUp": [MockFunction],
            "open": [Function],
            "pushItem": [MockFunction],
            "registerEvent": [MockFunction],
            "registerMethod": [Function],
            "removeItem": [MockFunction],
            "setValue": [MockFunction],
            "triggerEvent": [MockFunction],
            "unshiftItem": [MockFunction],
          }
        }
      />,
      "duration": 1,
      "icon": undefined,
      "id": "properties.duration_message",
      "onClose": [Function],
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.duration - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.icon - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.icon - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.icon - value[0] - loading 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.icon - value[0] - success 1`] = `
Array [
  Array [
    Object {
      "className": "{}",
      "content": <HtmlComponent
        html="Message content"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "moveItemDown": [MockFunction],
            "moveItemUp": [MockFunction],
            "open": [Function],
            "pushItem": [MockFunction],
            "registerEvent": [MockFunction],
            "registerMethod": [Function],
            "removeItem": [MockFunction],
            "setValue": [MockFunction],
            "triggerEvent": [MockFunction],
            "unshiftItem": [MockFunction],
          }
        }
      />,
      "duration": 1,
      "icon": <IconBlock
        basePath=""
        blockId="properties.icon_icon"
        content={Object {}}
        events={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "makeCssClass": [MockFunction],
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
        properties="AppleFilled"
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "id": "properties.icon_message",
      "onClose": [Function],
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.icon - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.status: error - value[0] - error 1`] = `
Array [
  Array [
    Object {
      "className": "{}",
      "content": <HtmlComponent
        html="Message content"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "moveItemDown": [MockFunction],
            "moveItemUp": [MockFunction],
            "open": [Function],
            "pushItem": [MockFunction],
            "registerEvent": [MockFunction],
            "registerMethod": [Function],
            "removeItem": [MockFunction],
            "setValue": [MockFunction],
            "triggerEvent": [MockFunction],
            "unshiftItem": [MockFunction],
          }
        }
      />,
      "duration": 1,
      "icon": undefined,
      "id": "properties.status: error_message",
      "onClose": [Function],
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.status: error - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.status: error - value[0] - loading 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.status: error - value[0] - success 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.status: error - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.status: info - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.status: info - value[0] - info 1`] = `
Array [
  Array [
    Object {
      "className": "{}",
      "content": <HtmlComponent
        html="Message content"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "moveItemDown": [MockFunction],
            "moveItemUp": [MockFunction],
            "open": [Function],
            "pushItem": [MockFunction],
            "registerEvent": [MockFunction],
            "registerMethod": [Function],
            "removeItem": [MockFunction],
            "setValue": [MockFunction],
            "triggerEvent": [MockFunction],
            "unshiftItem": [MockFunction],
          }
        }
      />,
      "duration": 1,
      "icon": undefined,
      "id": "properties.status: info_message",
      "onClose": [Function],
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.status: info - value[0] - loading 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.status: info - value[0] - success 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.status: info - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.status: loading - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.status: loading - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.status: loading - value[0] - loading 1`] = `
Array [
  Array [
    Object {
      "className": "{}",
      "content": <HtmlComponent
        html="Message content"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "moveItemDown": [MockFunction],
            "moveItemUp": [MockFunction],
            "open": [Function],
            "pushItem": [MockFunction],
            "registerEvent": [MockFunction],
            "registerMethod": [Function],
            "removeItem": [MockFunction],
            "setValue": [MockFunction],
            "triggerEvent": [MockFunction],
            "unshiftItem": [MockFunction],
          }
        }
      />,
      "duration": 1,
      "icon": undefined,
      "id": "properties.status: loading_message",
      "onClose": [Function],
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.status: loading - value[0] - success 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.status: loading - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.status: warning - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.status: warning - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.status: warning - value[0] - loading 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.status: warning - value[0] - success 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - properties.status: warning - value[0] - warning 1`] = `
Array [
  Array [
    Object {
      "className": "{}",
      "content": <HtmlComponent
        html="Message content"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "moveItemDown": [MockFunction],
            "moveItemUp": [MockFunction],
            "open": [Function],
            "pushItem": [MockFunction],
            "registerEvent": [MockFunction],
            "registerMethod": [Function],
            "removeItem": [MockFunction],
            "setValue": [MockFunction],
            "triggerEvent": [MockFunction],
            "unshiftItem": [MockFunction],
          }
        }
      />,
      "duration": 1,
      "icon": undefined,
      "id": "properties.status: warning_message",
      "onClose": [Function],
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - with html content - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - with html content - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - with html content - value[0] - loading 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - with html content - value[0] - success 1`] = `
Array [
  Array [
    Object {
      "className": "{}",
      "content": <HtmlComponent
        html=<div style="color:pink;">
  <strong>
    Message Content Html
  </strong>
</div>
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "moveItemDown": [MockFunction],
            "moveItemUp": [MockFunction],
            "open": [Function],
            "pushItem": [MockFunction],
            "registerEvent": [MockFunction],
            "registerMethod": [Function],
            "removeItem": [MockFunction],
            "setValue": [MockFunction],
            "triggerEvent": [MockFunction],
            "unshiftItem": [MockFunction],
          }
        }
      />,
      "duration": 1,
      "icon": undefined,
      "id": "with html content_message",
      "onClose": [Function],
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"duration":1}} - with html content - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - default - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - default - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - default - value[0] - loading 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - default - value[0] - success 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - default - value[0] - warning 1`] = `
Array [
  Array [
    Object {
      "className": "{}",
      "content": <HtmlComponent
        html="default"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "moveItemDown": [MockFunction],
            "moveItemUp": [MockFunction],
            "open": [Function],
            "pushItem": [MockFunction],
            "registerEvent": [MockFunction],
            "registerMethod": [Function],
            "removeItem": [MockFunction],
            "setValue": [MockFunction],
            "triggerEvent": [MockFunction],
            "unshiftItem": [MockFunction],
          }
        }
      />,
      "duration": undefined,
      "icon": undefined,
      "id": "default_message",
      "onClose": [Function],
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.content - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.content - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.content - value[0] - loading 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.content - value[0] - success 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.content - value[0] - warning 1`] = `
Array [
  Array [
    Object {
      "className": "{}",
      "content": <HtmlComponent
        html="Message content"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "moveItemDown": [MockFunction],
            "moveItemUp": [MockFunction],
            "open": [Function],
            "pushItem": [MockFunction],
            "registerEvent": [MockFunction],
            "registerMethod": [Function],
            "removeItem": [MockFunction],
            "setValue": [MockFunction],
            "triggerEvent": [MockFunction],
            "unshiftItem": [MockFunction],
          }
        }
      />,
      "duration": undefined,
      "icon": undefined,
      "id": "properties.content_message",
      "onClose": [Function],
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.duration - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.duration - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.duration - value[0] - loading 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.duration - value[0] - success 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.duration - value[0] - warning 1`] = `
Array [
  Array [
    Object {
      "className": "{}",
      "content": <HtmlComponent
        html="Message content"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "moveItemDown": [MockFunction],
            "moveItemUp": [MockFunction],
            "open": [Function],
            "pushItem": [MockFunction],
            "registerEvent": [MockFunction],
            "registerMethod": [Function],
            "removeItem": [MockFunction],
            "setValue": [MockFunction],
            "triggerEvent": [MockFunction],
            "unshiftItem": [MockFunction],
          }
        }
      />,
      "duration": 5,
      "icon": undefined,
      "id": "properties.duration_message",
      "onClose": [Function],
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.icon - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.icon - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.icon - value[0] - loading 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.icon - value[0] - success 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.icon - value[0] - warning 1`] = `
Array [
  Array [
    Object {
      "className": "{}",
      "content": <HtmlComponent
        html="Message content"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "moveItemDown": [MockFunction],
            "moveItemUp": [MockFunction],
            "open": [Function],
            "pushItem": [MockFunction],
            "registerEvent": [MockFunction],
            "registerMethod": [Function],
            "removeItem": [MockFunction],
            "setValue": [MockFunction],
            "triggerEvent": [MockFunction],
            "unshiftItem": [MockFunction],
          }
        }
      />,
      "duration": undefined,
      "icon": <IconBlock
        basePath=""
        blockId="properties.icon_icon"
        content={Object {}}
        events={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "makeCssClass": [MockFunction],
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
        properties="AppleFilled"
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "id": "properties.icon_message",
      "onClose": [Function],
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.status: error - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.status: error - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.status: error - value[0] - loading 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.status: error - value[0] - success 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.status: error - value[0] - warning 1`] = `
Array [
  Array [
    Object {
      "className": "{}",
      "content": <HtmlComponent
        html="Message content"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "moveItemDown": [MockFunction],
            "moveItemUp": [MockFunction],
            "open": [Function],
            "pushItem": [MockFunction],
            "registerEvent": [MockFunction],
            "registerMethod": [Function],
            "removeItem": [MockFunction],
            "setValue": [MockFunction],
            "triggerEvent": [MockFunction],
            "unshiftItem": [MockFunction],
          }
        }
      />,
      "duration": undefined,
      "icon": undefined,
      "id": "properties.status: error_message",
      "onClose": [Function],
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.status: info - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.status: info - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.status: info - value[0] - loading 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.status: info - value[0] - success 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.status: info - value[0] - warning 1`] = `
Array [
  Array [
    Object {
      "className": "{}",
      "content": <HtmlComponent
        html="Message content"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "moveItemDown": [MockFunction],
            "moveItemUp": [MockFunction],
            "open": [Function],
            "pushItem": [MockFunction],
            "registerEvent": [MockFunction],
            "registerMethod": [Function],
            "removeItem": [MockFunction],
            "setValue": [MockFunction],
            "triggerEvent": [MockFunction],
            "unshiftItem": [MockFunction],
          }
        }
      />,
      "duration": undefined,
      "icon": undefined,
      "id": "properties.status: info_message",
      "onClose": [Function],
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.status: loading - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.status: loading - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.status: loading - value[0] - loading 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.status: loading - value[0] - success 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.status: loading - value[0] - warning 1`] = `
Array [
  Array [
    Object {
      "className": "{}",
      "content": <HtmlComponent
        html="Message content"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "moveItemDown": [MockFunction],
            "moveItemUp": [MockFunction],
            "open": [Function],
            "pushItem": [MockFunction],
            "registerEvent": [MockFunction],
            "registerMethod": [Function],
            "removeItem": [MockFunction],
            "setValue": [MockFunction],
            "triggerEvent": [MockFunction],
            "unshiftItem": [MockFunction],
          }
        }
      />,
      "duration": undefined,
      "icon": undefined,
      "id": "properties.status: loading_message",
      "onClose": [Function],
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.status: warning - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.status: warning - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.status: warning - value[0] - loading 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.status: warning - value[0] - success 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - properties.status: warning - value[0] - warning 1`] = `
Array [
  Array [
    Object {
      "className": "{}",
      "content": <HtmlComponent
        html="Message content"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "moveItemDown": [MockFunction],
            "moveItemUp": [MockFunction],
            "open": [Function],
            "pushItem": [MockFunction],
            "registerEvent": [MockFunction],
            "registerMethod": [Function],
            "removeItem": [MockFunction],
            "setValue": [MockFunction],
            "triggerEvent": [MockFunction],
            "unshiftItem": [MockFunction],
          }
        }
      />,
      "duration": undefined,
      "icon": undefined,
      "id": "properties.status: warning_message",
      "onClose": [Function],
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - with html content - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - with html content - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - with html content - value[0] - loading 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - with html content - value[0] - success 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{"status":"warning"}} - with html content - value[0] - warning 1`] = `
Array [
  Array [
    Object {
      "className": "{}",
      "content": <HtmlComponent
        html=<div style="color:pink;">
  <strong>
    Message Content Html
  </strong>
</div>
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "moveItemDown": [MockFunction],
            "moveItemUp": [MockFunction],
            "open": [Function],
            "pushItem": [MockFunction],
            "registerEvent": [MockFunction],
            "registerMethod": [Function],
            "removeItem": [MockFunction],
            "setValue": [MockFunction],
            "triggerEvent": [MockFunction],
            "unshiftItem": [MockFunction],
          }
        }
      />,
      "duration": undefined,
      "icon": undefined,
      "id": "with html content_message",
      "onClose": [Function],
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{}} - default - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - default - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - default - value[0] - loading 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - default - value[0] - success 1`] = `
Array [
  Array [
    Object {
      "className": "{}",
      "content": <HtmlComponent
        html="default"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "moveItemDown": [MockFunction],
            "moveItemUp": [MockFunction],
            "open": [Function],
            "pushItem": [MockFunction],
            "registerEvent": [MockFunction],
            "registerMethod": [Function],
            "removeItem": [MockFunction],
            "setValue": [MockFunction],
            "triggerEvent": [MockFunction],
            "unshiftItem": [MockFunction],
          }
        }
      />,
      "duration": undefined,
      "icon": undefined,
      "id": "default_message",
      "onClose": [Function],
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{}} - default - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - properties.content - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - properties.content - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - properties.content - value[0] - loading 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - properties.content - value[0] - success 1`] = `
Array [
  Array [
    Object {
      "className": "{}",
      "content": <HtmlComponent
        html="Message content"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "moveItemDown": [MockFunction],
            "moveItemUp": [MockFunction],
            "open": [Function],
            "pushItem": [MockFunction],
            "registerEvent": [MockFunction],
            "registerMethod": [Function],
            "removeItem": [MockFunction],
            "setValue": [MockFunction],
            "triggerEvent": [MockFunction],
            "unshiftItem": [MockFunction],
          }
        }
      />,
      "duration": undefined,
      "icon": undefined,
      "id": "properties.content_message",
      "onClose": [Function],
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{}} - properties.content - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - properties.duration - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - properties.duration - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - properties.duration - value[0] - loading 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - properties.duration - value[0] - success 1`] = `
Array [
  Array [
    Object {
      "className": "{}",
      "content": <HtmlComponent
        html="Message content"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "moveItemDown": [MockFunction],
            "moveItemUp": [MockFunction],
            "open": [Function],
            "pushItem": [MockFunction],
            "registerEvent": [MockFunction],
            "registerMethod": [Function],
            "removeItem": [MockFunction],
            "setValue": [MockFunction],
            "triggerEvent": [MockFunction],
            "unshiftItem": [MockFunction],
          }
        }
      />,
      "duration": 5,
      "icon": undefined,
      "id": "properties.duration_message",
      "onClose": [Function],
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{}} - properties.duration - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - properties.icon - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - properties.icon - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - properties.icon - value[0] - loading 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - properties.icon - value[0] - success 1`] = `
Array [
  Array [
    Object {
      "className": "{}",
      "content": <HtmlComponent
        html="Message content"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "moveItemDown": [MockFunction],
            "moveItemUp": [MockFunction],
            "open": [Function],
            "pushItem": [MockFunction],
            "registerEvent": [MockFunction],
            "registerMethod": [Function],
            "removeItem": [MockFunction],
            "setValue": [MockFunction],
            "triggerEvent": [MockFunction],
            "unshiftItem": [MockFunction],
          }
        }
      />,
      "duration": undefined,
      "icon": <IconBlock
        basePath=""
        blockId="properties.icon_icon"
        content={Object {}}
        events={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "makeCssClass": [MockFunction],
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
        properties="AppleFilled"
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "id": "properties.icon_message",
      "onClose": [Function],
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{}} - properties.icon - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - properties.status: error - value[0] - error 1`] = `
Array [
  Array [
    Object {
      "className": "{}",
      "content": <HtmlComponent
        html="Message content"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "moveItemDown": [MockFunction],
            "moveItemUp": [MockFunction],
            "open": [Function],
            "pushItem": [MockFunction],
            "registerEvent": [MockFunction],
            "registerMethod": [Function],
            "removeItem": [MockFunction],
            "setValue": [MockFunction],
            "triggerEvent": [MockFunction],
            "unshiftItem": [MockFunction],
          }
        }
      />,
      "duration": undefined,
      "icon": undefined,
      "id": "properties.status: error_message",
      "onClose": [Function],
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{}} - properties.status: error - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - properties.status: error - value[0] - loading 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - properties.status: error - value[0] - success 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - properties.status: error - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - properties.status: info - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - properties.status: info - value[0] - info 1`] = `
Array [
  Array [
    Object {
      "className": "{}",
      "content": <HtmlComponent
        html="Message content"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "moveItemDown": [MockFunction],
            "moveItemUp": [MockFunction],
            "open": [Function],
            "pushItem": [MockFunction],
            "registerEvent": [MockFunction],
            "registerMethod": [Function],
            "removeItem": [MockFunction],
            "setValue": [MockFunction],
            "triggerEvent": [MockFunction],
            "unshiftItem": [MockFunction],
          }
        }
      />,
      "duration": undefined,
      "icon": undefined,
      "id": "properties.status: info_message",
      "onClose": [Function],
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{}} - properties.status: info - value[0] - loading 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - properties.status: info - value[0] - success 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - properties.status: info - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - properties.status: loading - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - properties.status: loading - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - properties.status: loading - value[0] - loading 1`] = `
Array [
  Array [
    Object {
      "className": "{}",
      "content": <HtmlComponent
        html="Message content"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "moveItemDown": [MockFunction],
            "moveItemUp": [MockFunction],
            "open": [Function],
            "pushItem": [MockFunction],
            "registerEvent": [MockFunction],
            "registerMethod": [Function],
            "removeItem": [MockFunction],
            "setValue": [MockFunction],
            "triggerEvent": [MockFunction],
            "unshiftItem": [MockFunction],
          }
        }
      />,
      "duration": undefined,
      "icon": undefined,
      "id": "properties.status: loading_message",
      "onClose": [Function],
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{}} - properties.status: loading - value[0] - success 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - properties.status: loading - value[0] - warning 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - properties.status: warning - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - properties.status: warning - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - properties.status: warning - value[0] - loading 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - properties.status: warning - value[0] - success 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - properties.status: warning - value[0] - warning 1`] = `
Array [
  Array [
    Object {
      "className": "{}",
      "content": <HtmlComponent
        html="Message content"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "moveItemDown": [MockFunction],
            "moveItemUp": [MockFunction],
            "open": [Function],
            "pushItem": [MockFunction],
            "registerEvent": [MockFunction],
            "registerMethod": [Function],
            "removeItem": [MockFunction],
            "setValue": [MockFunction],
            "triggerEvent": [MockFunction],
            "unshiftItem": [MockFunction],
          }
        }
      />,
      "duration": undefined,
      "icon": undefined,
      "id": "properties.status: warning_message",
      "onClose": [Function],
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{}} - with html content - value[0] - error 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - with html content - value[0] - info 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - with html content - value[0] - loading 1`] = `Array []`;

exports[`Mock for method: {"name":"open","args":{}} - with html content - value[0] - success 1`] = `
Array [
  Array [
    Object {
      "className": "{}",
      "content": <HtmlComponent
        html=<div style="color:pink;">
  <strong>
    Message Content Html
  </strong>
</div>
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "moveItemDown": [MockFunction],
            "moveItemUp": [MockFunction],
            "open": [Function],
            "pushItem": [MockFunction],
            "registerEvent": [MockFunction],
            "registerMethod": [Function],
            "removeItem": [MockFunction],
            "setValue": [MockFunction],
            "triggerEvent": [MockFunction],
            "unshiftItem": [MockFunction],
          }
        }
      />,
      "duration": undefined,
      "icon": undefined,
      "id": "with html content_message",
      "onClose": [Function],
    },
  ],
]
`;

exports[`Mock for method: {"name":"open","args":{}} - with html content - value[0] - warning 1`] = `Array []`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema properties.content 1`] = `true`;

exports[`Test Schema properties.content 2`] = `null`;

exports[`Test Schema properties.duration 1`] = `true`;

exports[`Test Schema properties.duration 2`] = `null`;

exports[`Test Schema properties.icon 1`] = `true`;

exports[`Test Schema properties.icon 2`] = `null`;

exports[`Test Schema properties.status: error 1`] = `true`;

exports[`Test Schema properties.status: error 2`] = `null`;

exports[`Test Schema properties.status: info 1`] = `true`;

exports[`Test Schema properties.status: info 2`] = `null`;

exports[`Test Schema properties.status: loading 1`] = `true`;

exports[`Test Schema properties.status: loading 2`] = `null`;

exports[`Test Schema properties.status: warning 1`] = `true`;

exports[`Test Schema properties.status: warning 2`] = `null`;

exports[`Test Schema with html content 1`] = `true`;

exports[`Test Schema with html content 2`] = `null`;
